objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Upsell_Opportunity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isdelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Isdelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Name__c</fullName>
        <label>Count Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Number__c</fullName>
        <label>Count Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Contact__c</fullName>
        <label>Count of Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity__c</fullName>
        <label>Total Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Case_Number__c</fullName>
        <label>Latest_Case_Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Opportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_No_Of_Contacts__c</fullName>
        <label>Total_No_Of_Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Billing_to_shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Billing to shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recent_opportunity_Amount__c</fullName>
        <label>Recent opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity_Client_Contact</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Business_Accounts</fullName>
        <active>true</active>
        <label>Business Accounts</label>
    </recordTypes>
    <validationRules>
        <fullName>FullName</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( OR(CONTAINS( Name , &quot; &quot;) ,CONTAINS( Name , &quot;.&quot;)) )</errorConditionFormula>
        <errorMessage>please Enter Valid Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>isEditabel</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(isEditable__c)</errorConditionFormula>
        <errorMessage>This Record is Not editable because This is created on CreatedDate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Namefield_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
NOT(ISBLANK(Name)),
NOT(REGEX(Name,&quot;([a-zA-Z])*+([.])*+([ ])*+([a-zA-Z])*+([ ])*+([a-zA-Z])*&quot;))


)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Give your Full Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Required_For_Customer_Direct</fullName>
        <active>true</active>
        <description>Phone is required when Account Type is Customer - Direct.</description>
        <errorConditionFormula>AND(ISPICKVAL(Type, &quot;Customer - Direct&quot;), ISBLANK(Phone))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone is required for accounts with Type &quot;Customer - Direct&quot;. Please enter a phone number before saving.</errorMessage>
    </validationRules>
</CustomObject>